# Cargo.toml

[package]
name = "Rust-DragonOS"
version = "0.1.0"
edition = "2024"
authors = ["Cyberworrior (Imu)"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.6.0"

[target.'cfg(target_os = "none")'.dependencies]
bootloader = "0.9"



[[bin]]
name = "Rust-DragonOS"
test = false
bench = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300 
test-success-exit-code = 33         # (0x10 << 1) | 1